Fixed so that gradle runs the tests now

--- a/build.gradle
+++ b/build.gradle
@@ -15,7 +15,10 @@ dependencies {
             'org.junit.jupiter:junit-jupiter-params:5.1.0'
     )
     testRuntimeOnly(
-            'org.junit.jupiter:junit-jupiter-api:5.1.0',
-            'org.junit.jupiter:junit-jupiter-params:5.1.0'
+            'org.junit.jupiter:junit-jupiter-engine:5.1.0'
     )
+}
+
+test {
+    useJUnitPlatform()
 }
